--- a/.pylintrc
+++ b/.pylintrc
@@ -2,6 +2,8 @@
 # Extension whitelist
 extension-pkg-whitelist=pydantic
 
+init-hook="from pylint.config import find_pylintrc; import os, sys; sys.path.append(os.path.dirname(find_pylintrc()))"
+
 # Specify a configuration file.
 #rcfile=
 
